lint: use private var
